# eudaemon

./: .gitignore  .gitmodules  LICENSE  MANIFEST  README.md  README.rst  eudaemon.py  eudaemon.service  eudaimon.py  pyproject.toml  setup.py
docs/: USAGE.rst
eudaemon/: __init__.py  brightness.py  brightness_monitor.py  idle_monitor.py  idleness.py  utils.py
